--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <title>Grocery Store</title>
     <script src="index.js" defer></script>
   </head>
-  <body></body>
+  <title>GROCERY STORE</title>
+  <body>
+    GROCERY STORE
+  </body>
 </html>
